--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="file_name">File Name</string>
     <string name="now_playing">Now Playing</string>
+    <string name="todo">TODO</string>
 </resources>
